--- a/msGeografia/src/main/resources/application.properties
+++ b/msGeografia/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9000
-server.servlet.context-path=/justicia
+server.servlet.context-path=/justicia/geo
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/justicia                      
 spring.datasource.username=root
